--- a/CommandMacros.csproj
+++ b/CommandMacros.csproj
@@ -7,6 +7,7 @@
 		<RootNamespace>CommandMacros</RootNamespace>
     <AssemblyName>CommandMacros</AssemblyName>
 		<ProjectGuid>{CD3EA34A-BD0D-4F9D-9B5F-11C40639FFD0}</ProjectGuid>
+		<SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +23,18 @@
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 	  <Optimize>true</Optimize>
 	  <LangVersion>8.0</LangVersion>
+		<OutputPath>bin\Release</OutputPath>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <ConsolePause>false</ConsolePause>
+    <CustomCommands>
+      <CustomCommands>
+        <Command>
+          <type>AfterBuild</type>
+          <command>zip -rjD ./zip/CommandMacros.zip ./bin/Release/*</command>
+        </Command>
+      </CustomCommands>
+    </CustomCommands>
 	</PropertyGroup>
 	<ItemGroup>
 		<Reference Include="VintagestoryAPI">
@@ -50,7 +63,8 @@
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="SuperMacroCommandler.cs" />
 		<Compile Include="AliasCommandler.cs" />
-		<Compile Include="MacroConfig.cs" />
+		<Compile Include="Configs.cs" />
+		<Compile Include="AliasDataStructures.cs" />
 	</ItemGroup>
   <ItemGroup>
 		<None Include="modinfo.json">
