complete overhaul of the way aliases are handled
now it registers commands dynamically, and dynamically calls the associated alias.

--- a/CommandMacros.csproj
+++ b/CommandMacros.csproj
@@ -59,7 +59,7 @@
     </Reference>
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="CommandMacros.cs" />
+		<Compile Include="AliasMod.cs" />
 		<Compile Include="Properties\AssemblyInfo.cs" />
 		<Compile Include="SuperMacroCommandler.cs" />
 		<Compile Include="AliasCommandler.cs" />
