clean ups in several places
mostly overhauled how saving is handled and should now be exactly the same as before but different!
add save and load command
remove Alias class's weird equality operators
bump to 0.0.5

--- a/CommandMacros.csproj
+++ b/CommandMacros.csproj
@@ -57,6 +57,10 @@
       <HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\Mods\VSSurvivalMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
+		<Reference Include="Newtonsoft.JSON">
+      <HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\Lib\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="AliasMod.cs" />
