some small changes, mostly to Alias

--- a/CommandMacros.csproj
+++ b/CommandMacros.csproj
@@ -8,26 +8,18 @@
 		<AssemblyName>CommandMacros</AssemblyName>
 		<ProjectGuid>{CD3EA34A-BD0D-4F9D-9B5F-11C40639FFD0}</ProjectGuid>
 		<SynchReleaseVersion>false</SynchReleaseVersion>
+		<VintageStoryInstall>\home\ah\.config\VintagestoryData</VintageStoryInstall>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<DebugSymbols>true</DebugSymbols>
 		<DebugType>full</DebugType>
 		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug\CommandMacros</OutputPath>
+		<OutputPath>bin\Debug</OutputPath>
 		<DefineConstants>DEBUG;</DefineConstants>
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 		<ConsolePause>false</ConsolePause>
 		<LangVersion>8.0</LangVersion>
-		<CustomCommands>
-			<CustomCommands>
-				<Command>
-					<type>AfterBuild</type>
-					<command>cp -Rf ./bin/Debug/ /Users/me/.config/VintagestoryData/Mods/</command>
-					<workingdir></workingdir>
-				</Command>
-			</CustomCommands>
-		</CustomCommands>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<Optimize>true</Optimize>
@@ -36,38 +28,38 @@
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 		<ConsolePause>false</ConsolePause>
-		<CustomCommands>
-			<CustomCommands>
-				<Command>
-					<type>AfterBuild</type>
-					<command>zip -rjD ./zip/CommandMacros.zip ./bin/Release/*</command>
-				</Command>
-			</CustomCommands>
-		</CustomCommands>
 	</PropertyGroup>
+	<Target Name="CopyToInstall" AfterTargets="Build" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+		<MakeDir Directories="$(VintageStoryInstall)\Mods\$(AssemblyName)"/>
+		<Exec Command="cp -r $(OutputPath)* $(VintageStoryInstall)\Mods\$(AssemblyName)" />
+	</Target>
+	<Target Name="CopyToDevInstall" AfterTargets="Build" Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<MakeDir Directories="$(VintageStoryInstall)\DevMods\$(AssemblyName)"/>
+		<Exec Command="cp -r $(OutputPath)* $(VintageStoryInstall)\DevMods\$(AssemblyName)" />
+	</Target>
 	<ItemGroup>
 		<Reference Include="VintagestoryAPI">
-			<HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\VintagestoryAPI.dll</HintPath>
+			<HintPath>\home\ah\ApplicationData\vintagestory\VintagestoryAPI.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VintagestoryLib">
-			<HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\VintagestoryLib.dll</HintPath>
+			<HintPath>\home\ah\ApplicationData\vintagestory\VintagestoryLib.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSCreativeMod">
-			<HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\Mods\VSCreativeMod.dll</HintPath>
+			<HintPath>\home\ah\ApplicationData\vintagestory\Mods\VSCreativeMod.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSEssentials">
-			<HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\Mods\VSEssentials.dll</HintPath>
+			<HintPath>\home\ah\ApplicationData\vintagestory\Mods\VSEssentials.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSSurvivalMod">
-			<HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\Mods\VSSurvivalMod.dll</HintPath>
+			<HintPath>\home\ah\ApplicationData\vintagestory\Mods\VSSurvivalMod.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="Newtonsoft.JSON">
-			<HintPath>..\..\..\..\..\..\..\..\..\..\Applications\vintagestory.app\Lib\Newtonsoft.Json.dll</HintPath>
+			<HintPath>\home\ah\ApplicationData\vintagestory\Lib\Newtonsoft.Json.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
@@ -93,13 +85,4 @@
 		</None>
 	</ItemGroup>
 	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets"/>
-	<ProjectExtensions>
-		<MonoDevelop>
-			<Properties>
-				<Policies>
-					<DotNetNamingPolicy ResourceNamePolicy="FileFormatDefault" DirectoryNamespaceAssociation="PrefixedHierarchical"/>
-				</Policies>
-			</Properties>
-		</MonoDevelop>
-	</ProjectExtensions>
 </Project>
