--- a/CommandMacros.csproj
+++ b/CommandMacros.csproj
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
 		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -8,34 +7,30 @@
 		<AssemblyName>CommandMacros</AssemblyName>
 		<ProjectGuid>{CD3EA34A-BD0D-4F9D-9B5F-11C40639FFD0}</ProjectGuid>
 		<SynchReleaseVersion>false</SynchReleaseVersion>
-		<VintageStoryInstall>\home\ah\.config\VintagestoryData</VintageStoryInstall>
+		<TargetFramework>net480</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<VintageStoryInstall>\home\ah\Documents\devStuff\vintagestory\vsdevdirs\cm</VintageStoryInstall>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<DebugSymbols>true</DebugSymbols>
 		<DebugType>full</DebugType>
 		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug</OutputPath>
+		<OutputPath>bin\Debug\</OutputPath>
 		<DefineConstants>DEBUG;</DefineConstants>
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 		<ConsolePause>false</ConsolePause>
-		<LangVersion>8.0</LangVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<Optimize>true</Optimize>
-		<LangVersion>8.0</LangVersion>
-		<OutputPath>bin\Release</OutputPath>
+		<OutputPath>bin\Release\</OutputPath>
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 		<ConsolePause>false</ConsolePause>
 	</PropertyGroup>
-	<Target Name="CopyToInstall" AfterTargets="Build" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<MakeDir Directories="$(VintageStoryInstall)\Mods\$(AssemblyName)"/>
-		<Exec Command="cp -r $(OutputPath)* $(VintageStoryInstall)\Mods\$(AssemblyName)" />
-	</Target>
-	<Target Name="CopyToDevInstall" AfterTargets="Build" Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<MakeDir Directories="$(VintageStoryInstall)\DevMods\$(AssemblyName)"/>
-		<Exec Command="cp -r $(OutputPath)* $(VintageStoryInstall)\DevMods\$(AssemblyName)" />
+	<Target Name="CustomAfterBuild" AfterTargets="Build">
+		<MakeDir Directories="$(VintageStoryInstall)\Mods\$(AssemblyName)" />
+		<Exec Command="cp -r $(OutputPath)* $(VintageStoryInstall)/Mods/$(AssemblyName)" />
 	</Target>
 	<ItemGroup>
 		<Reference Include="VintagestoryAPI">
@@ -64,17 +59,9 @@
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="AliasMod.cs"/>
-		<Compile Include="Properties\AssemblyInfo.cs"/>
-		<Compile Include="SuperMacroCommandler.cs"/>
-		<Compile Include="AliasCommandler.cs"/>
-		<Compile Include="Configs.cs"/>
-		<Compile Include="AliasManager.cs"/>
-		<Compile Include="Alias.cs"/>
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="assets\"/>
-		<Folder Include="assets\game\"/>
+		<Folder Include="assets\" />
+		<Folder Include="assets\game\" />
+		<Folder Include="obj\Debug\net480" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="modinfo.json">
@@ -83,6 +70,15 @@
 		<None Include="assets\game\lang\en.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+		<None Remove="zip\**" />
+		<None Remove="obj\**" />
 	</ItemGroup>
-	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets"/>
+	<ItemGroup>
+	  <Compile Remove="zip\**" />
+	  <Compile Remove="obj\**" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Remove="zip\**" />
+	  <EmbeddedResource Remove="obj\**" />
+	</ItemGroup>
 </Project>
